use concurrent linked dequeue to mitigate concurrent modification exception